updated past guest table

--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
                 <table class="table">
                 	<caption>Previous Guests</caption>
                 	<tr>
-                		<!-- <td>Bill Binder</td> -->
+                		<td>Bill Binder</td>
                 		<td>Shane Carey</td>
                 		<td>Clifton Gray</td>
-                	<!-- </tr> -->
-                	<!-- <tr> -->
-                		<td>Chelsea Greenberg</td>
-                		<!-- <td>Eli Kluger</td> -->
-                		<!-- <td>NegativSteve</td> -->
                 	</tr>
                 	<tr>
-                		<td></td>
+                		<td>Chelsea Greenberg</td>
+                		<td>Eli Kluger</td>
+                        <td>Steve Marek</td>
+                    </tr>
+                    <tr>
+                		<td>NegativSteve</td>
                 		<td>Genevieve Rice</td>
-                		<td></td>
+                		<td>Matt Storrs</td>
                 	</tr>
                 </table>
             </div>
